k8s/manifests/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: fs-project
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 3005
      protocol: TCP
      targetPort: 3005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: fs-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: fs-project/app
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /api/healthz
              port: 3005
